<resources>
    <string name="app_name">Login</string>
    <string name="qu_quieres_hacer">¿Qué quieres hacer?</string>
    <string name="registrarme">REGISTRARME</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="registro_de_usuario">Registro de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
</resources>